--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<meta property="og:description" content="Compare insurance plans and save money. Trusted comparison guides for USA & UK.">
 	<meta property="og:type" content="website">
 	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <a class="skip-link" href="#main">Skip to content</a>
@@ -47,3 +48,4 @@
 <script src="css/js/main.min.js" defer></script>
 </body>
 </html>
+
